--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div class="header">
                 <div class="header-content">
                     <div class="profile-image">
-                        <img src="images/photo.jpeg" alt="Umair Ali Khan" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="images/photo.png" alt="Umair Ali Khan" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <h1 class="name">Umair Ali Khan</h1>
                     <p class="title">Senior Researcher & AI Consultant</p>
