--- a/index.html
+++ b/index.html
@@ -445,23 +445,20 @@
                             <h2 class="section-title">Education</h2>
                             
                             <div class="education-item">
-                                <div class="job-title">Ph.D. in Information Technology</div>
+                                <div class="job-title">Ph.D. in Information Technology, 2013</div>
                                 <div class="company"><a href="https://www.aau.at/en/" target="_blank">Alpen-Adria University, Klagenfurt, Austria</a></div>
-                                <div class="date">2013</div>
                                 <div class="description">Focus: Machine learning, embedded systems, dynamic energy management</div>
                             </div>
 
                             <div class="education-item">
-                                <div class="job-title">Master in Information Technology</div>
+                                <div class="job-title">Master in Information Technology<, 2010/div>
                                 <div class="company"><a href="https://www.aau.at/en/" target="_blank">Alpen-Adria University, Klagenfurt, Austria</a></div>
-                                <div class="date">2010</div>
-                                <div class="description">Focus: Machine learning, optimization</div>
+                                <div class="description">Focus: Optimization, intelligent transportation systems</div>
                             </div>
 
                             <div class="education-item">
-                                <div class="job-title">Bachelor in Computer Systems Engineering</div>
+                                <div class="job-title">Bachelor in Computer Systems Engineering, 2004</div>
                                 <div class="company"><a href="https://quest.edu.pk/" target="_blank">Quaid-e-Awam University of Engineering, Science & Technology (QUEST)</a></div>
-                                <div class="date">2004</div>
                                 <div class="description">Focus: Programming, database design, embedded systems</div>
                             </div>
                         </div>
@@ -502,7 +499,7 @@
                                 <p><strong>Email:</strong> umairali.khan@haagahelia.fi</p>
                                 <p><strong>Date of Birth:</strong> 09.04.1981</p>
                                 <p><strong>Nationality:</strong> Pakistan</p>
-                                <p><strong>Languages:</strong> English (fluent), Urdu (native)</p>
+                                <p><strong>Languages:</strong> English (C2/Proficient), Urdu (native), Finnish (A2/Elementary), German (A1/Beginner)</p>
                                 
                                 <div class="social-links">
                                     <a href="https://www.linkedin.com/in/uakhan80" class="social-link" target="_blank">🔗 LinkedIn</a>
