--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Umair Ali Khan - Senior AI Researcher & AI Consultant</title>
+    <title>Umair Ali Khan - Senior Researcher & AI Consultant</title>
     <style>
         * {
             margin: 0;
@@ -453,12 +453,13 @@
                             <div class="education-item">
                                 <div class="job-title">Master in Information Technology<, 2010/div>
                                 <div class="company"><a href="https://www.aau.at/en/" target="_blank">Alpen-Adria University, Klagenfurt, Austria</a></div>
-                                <div class="description">Focus: Optimization, intelligent transportation systems</div>
+                                <div class="description">Focus: Machine learning, optimization</div>
                             </div>
 
                             <div class="education-item">
-                                <div class="job-title">Bachelor in Computer Systems Engineering, 2004</div>
+                                <div class="job-title">Bachelor in Computer Systems Engineering</div>
                                 <div class="company"><a href="https://quest.edu.pk/" target="_blank">Quaid-e-Awam University of Engineering, Science & Technology (QUEST)</a></div>
+                                <div class="date">2004</div>
                                 <div class="description">Focus: Programming, database design, embedded systems</div>
                             </div>
                         </div>
@@ -499,7 +500,7 @@
                                 <p><strong>Email:</strong> umairali.khan@haagahelia.fi</p>
                                 <p><strong>Date of Birth:</strong> 09.04.1981</p>
                                 <p><strong>Nationality:</strong> Pakistan</p>
-                                <p><strong>Languages:</strong> English (C2/Proficient), Urdu (native), Finnish (A2/Elementary), German (A1/Beginner)</p>
+                                <p><strong>Languages:</strong> English (fluent), Urdu (native)</p>
                                 
                                 <div class="social-links">
                                     <a href="https://www.linkedin.com/in/uakhan80" class="social-link" target="_blank">🔗 LinkedIn</a>
