--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div class="header">
                 <div class="header-content">
                     <div class="profile-image">
-                        <img src="images/photo.png" alt="Umair Ali Khan" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="images/photo.jpeg" alt="Umair Ali Khan" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <h1 class="name">Umair Ali Khan</h1>
                     <p class="title">Senior Researcher & AI Consultant</p>
@@ -445,14 +445,16 @@
                             <h2 class="section-title">Education</h2>
                             
                             <div class="education-item">
-                                <div class="job-title">Ph.D. in Information Technology, 2013</div>
+                                <div class="job-title">Ph.D. in Information Technology</div>
                                 <div class="company"><a href="https://www.aau.at/en/" target="_blank">Alpen-Adria University, Klagenfurt, Austria</a></div>
+                                <div class="date">2013</div>
                                 <div class="description">Focus: Machine learning, embedded systems, dynamic energy management</div>
                             </div>
 
                             <div class="education-item">
-                                <div class="job-title">Master in Information Technology<, 2010/div>
+                                <div class="job-title">Master in Information Technology</div>
                                 <div class="company"><a href="https://www.aau.at/en/" target="_blank">Alpen-Adria University, Klagenfurt, Austria</a></div>
+                                <div class="date">2010</div>
                                 <div class="description">Focus: Machine learning, optimization</div>
                             </div>
 
