--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div class="header">
                 <div class="header-content">
                     <div class="profile-image">
-                        <img src="images/photo.jpg" alt="Umair Ali Khan" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                        <img src="images/photo.png" alt="Umair Ali Khan" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
                     <h1 class="name">Umair Ali Khan</h1>
                     <p class="title">Senior Researcher & AI Consultant</p>
@@ -425,7 +425,7 @@
                             <div class="experience-item">
                                 <div class="job-title">Professor</div>
                                 <div class="company"><a href="https://quest.edu.pk/" target="_blank">QUEST University</a></div>
-                                <div class="date">01/2022 – 08/2022 | Pakistan</div>
+                                <div class="date">01/2022 – Present | Pakistan</div>
                             </div>
 
                             <div class="experience-item">
@@ -496,9 +496,8 @@
                             <h2 class="section-title">Contact Details</h2>
                             <div class="contact-details">
                                 <h4>Personal Information</h4>
-                                <p><strong>Address:</strong> Opastinsilta 1A, 00520 Helsinki, Finland</p>
-                                <p><strong>Phone:</strong> +358503422685</p>
-                                <p><strong>WhatsApp:</strong> +923337024006</p>
+                                <p><strong>Office address:</strong> Ratapihantie 13, 00520 Helsinki, Finland</p>
+                                <p><strong>Phone/WhatsApp:</strong> +358503422685</p>
                                 <p><strong>Email:</strong> umairali.khan@haagahelia.fi</p>
                                 <p><strong>Date of Birth:</strong> 09.04.1981</p>
                                 <p><strong>Nationality:</strong> Pakistan</p>
@@ -526,7 +525,7 @@
                                         <span class="skill-tag">CUDA C</span>
                                         <span class="skill-tag">Arduino</span>
                                         <span class="skill-tag">PHP</span>
-                                        <span class="skill-tag">HTML</span>
+                                        <span class="skill-tag">HTML/CSS</span>
                                     </div>
                                 </div>
 
@@ -581,7 +580,7 @@
                     <h2 class="section-title">Ongoing Projects</h2>
                     
                     <div class="project-item">
-                        <div class="job-title">FAIR: Finnish AI Region</div>
+                        <div class="job-title"><a href="https://www.fairedih.fi/" target="_blank"></a>FAIR: Finnish AI Region</div>
                         <div class="company">Role: AI consultant, researcher, AI developer</div>
                         <div class="date">Funding: European Commission, Business Finland, The City of Helsinki Innovation Fund</div>
                         <div class="description">
@@ -590,7 +589,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title">Generative AI Enhanced Knowledge Management in Business</div>
+                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/gaik" target="_blank"></a>GAIK: Generative AI Enhanced Knowledge Management in Business</div>
                         <div class="company">Role: Senior researcher</div>
                         <div class="date">Funding: ERDF, Finland</div>
                         <div class="description">
@@ -599,7 +598,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title">METACOG</div>
+                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/metacog" target="_blank"></a>METACOG</div>
                         <div class="company">Role: Senior researcher</div>
                         <div class="date">Funding: European Union (Erasmus+)</div>
                         <div class="description">
@@ -608,7 +607,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title">ALFA Labs</div>
+                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/alfa-labs" target="_blank"></a>ALFA Labs</div>
                         <div class="company">Role: Senior researcher</div>
                         <div class="date">Funding: European Union (Erasmus+)</div>
                         <div class="description">
@@ -617,7 +616,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title">Applied AI for Business and Education Hub with the Ulysseus European University</div>
+                        <div class="job-title"><a href="https://ulysseus.eu/innovation-hubs/artificial-intelligence/" target="_blank"></a>Applied AI for Business and Education Hub with the Ulysseus European University</div>
                         <div class="company">Role: Senior researcher & member steering committee</div>
                         <div class="date">Funding: European Commission</div>
                         <div class="description">
@@ -652,6 +651,11 @@
                         <div class="publication">
                             <div class="publication-title">A System to Ensure Information Trustworthiness in Artificial Intelligence Enhanced Higher Education</div>
                             <div class="publication-details">Khan, U.A.; Kauttonen, J.; Aunimo, L.; Alamäki, A. - Journal of Information Technology Education: Research 23, 2024</div>
+                        </div>
+
+                        <div class="publication">
+                            <div class="publication-title">Topic mining for theses and job ads in ICT sector: can higher education institutes respond to job market demands?</div>
+                            <div class="publication-details">Kauttonen, J.; Khan, U.A.; Aunimo, L.; Antti, N.; Klemetti A. - Frontiers Education 9, 2024</div>
                         </div>
                     </div>
                 </div>
