--- a/index.html
+++ b/index.html
@@ -554,11 +554,11 @@
                                 <div class="skill-category">
                                     <h4>AI Specializations</h4>
                                     <div class="skill-tags">
-                                        <span class="skill-tag">Machine Learning</span>
-                                        <span class="skill-tag">NLP</span>
-                                        <span class="skill-tag">Generative AI</span>
-                                        <span class="skill-tag">Computer Vision</span>
-                                        <span class="skill-tag">Deep Learning</span>
+                                        <span class="skill-tag">Machine/Deep Learning</span>
+                                        <span class="skill-tag">AI Agents</span>
+                                        <span class="skill-tag">RAG, MCP</span>
+                                        <span class="skill-tag">Knowledge extraction and processing with LLMs</span>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -626,7 +626,7 @@
                 </div>
 
                 <div class="section">
-                    <h2 class="section-title">Selected Publications (Last 5 Years)</h2>
+                    <h2 class="section-title">Selected Publications (Last 2 Years)</h2>
                     <div class="publications">
                         <div class="publication">
                             <div class="publication-title">AI Adoption in Finnish SMEs: Key Findings from AI Consultancy at a European Digital Innovation Hub</div>
