--- a/index.html
+++ b/index.html
@@ -399,7 +399,11 @@
                 <div class="section">
                     <h2 class="section-title">Profile</h2>
                     <p class="profile-text">
-                        I am a researcher and academician with a Ph.D. in Information Technology. I have worked in various academic and research roles across Austria, Germany, and Pakistan. Currently, I work as a Senior Researcher at <a href="https://www.haaga-helia.fi/fi" target="_blank" style="color: #3498db; text-decoration: none;">Haaga-Helia University of Applied Sciences</a> in Helsinki, Finland, where my research focuses on applied AI, machine learning, natural language processing, and generative AI. I also work as an AI advisor in the <a href="https://www.fairedih.fi/" target="_blank" style="color: #3498db; text-decoration: none;">Finnish AI Region (FAIR)</a> project to assist companies in AI adoption.
+                        I am a researcher and AI consultant with over 15 years of experience spanning academia and industry across Austria, Germany, Finland, and Pakistan. With a Ph.D. in Information Technology from Austria and leadership experience in Pakistan, I currently serve as a Senior Researcher and AI Advisor at <a href="https://www.haaga-helia.fi/fi" target="_blank" style="color: #3498db; text-decoration: none;">Haaga-Helia University of Applied Sciences</a> in Helsinki, Finland. My expertise encompasses applied artificial intelligence, machine learning, and generative AI, with a proven track record of securing international funding, managing R&D projects, and publishing high-impact research.
+                        <br><br>
+                        As an AI consultant and developer for the <a href="https://www.fairedih.fi/" target="_blank" style="color: #3498db; text-decoration: none;">Finnish AI Region (FAIR)</a> project, I bridge the gap between cutting-edge AI research and practical business applications. I specialize in designing AI roadmaps, developing proof-of-concepts, and providing technical consultancy to startups and SMEs across various sectors. I also specialize in establishing research networks and collaborating effectively with diverse research teams, industry stakeholders, and government agencies across Europe and beyond.
+                        <br><br>
+                        My current research focus on AI agents, RAG, MCP, and knowledge extraction & processing using LLms. I am passionate about democratizing AI knowledge and ensuring responsible AI adoption in business and education sectors.
                     </p>
                 </div>
 
