--- a/index.html
+++ b/index.html
@@ -497,9 +497,8 @@
 
                     <div class="right-column">
                         <div class="section">
-                            <h2 class="section-title">Contact Details</h2>
+                            <h2 class="section-title">Contact & Personal Details</h2>
                             <div class="contact-details">
-                                <h4>Personal Information</h4>
                                 <p><strong>Office address:</strong> Ratapihantie 13, 00520 Helsinki, Finland</p>
                                 <p><strong>Phone/WhatsApp:</strong> +358503422685</p>
                                 <p><strong>Email:</strong> umairali.khan@haagahelia.fi</p>
