--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <br><br>
                         As an AI consultant for the <a href="https://www.fairedih.fi/" target="_blank" style="color: #3498db; text-decoration: none;">Finnish AI Region (FAIR)</a> project, I bridge the gap between cutting-edge AI research and practical business applications. I specialize in designing AI roadmaps, developing proof-of-concepts, and providing technical consultancy to startups and SMEs across various sectors. I also specialize in establishing research networks and collaborating effectively with diverse research teams, industry stakeholders, and government agencies across Europe and beyond.
                         <br><br>
-                        My current research focus on AI agents, RAG, MCP, and knowledge extraction & processing using LLms. I am passionate about democratizing AI knowledge and ensuring responsible AI adoption in business and education sectors.
+                        My current research focus on AI agents, RAG, MCP, and knowledge extraction & processing using LLMs. I am passionate about democratizing AI knowledge and ensuring responsible AI adoption in business and education sectors.
                     </p>
                 </div>
 
@@ -601,7 +601,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/metacog" target="_blank"></a>METACOG</div>
+                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/metacog" target="_blank">METACOG</a></div>
                         <div class="company">Role: Senior researcher</div>
                         <div class="date">Funding: European Union (Erasmus+)</div>
                         <div class="description">
