--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                     <h2 class="section-title">Ongoing Projects</h2>
                     
                     <div class="project-item">
-                        <div class="job-title"><a href="https://www.fairedih.fi/" target="_blank"></a>FAIR: Finnish AI Region</div>
+                        <div class="job-title"><a href="https://www.fairedih.fi/" target="_blank">FAIR: Finnish AI Region</a></div>
                         <div class="company">Role: AI consultant, researcher, AI developer</div>
                         <div class="date">Funding: European Commission, Business Finland, The City of Helsinki Innovation Fund</div>
                         <div class="description">
@@ -592,7 +592,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/gaik" target="_blank"></a>GAIK: Generative AI Enhanced Knowledge Management in Business</div>
+                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/gaik" target="_blank">GAIK: Generative AI Enhanced Knowledge Management in Busines</a></div>
                         <div class="company">Role: Senior researcher</div>
                         <div class="date">Funding: ERDF, Finland</div>
                         <div class="description">
@@ -610,7 +610,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/alfa-labs" target="_blank"></a>ALFA Labs</div>
+                        <div class="job-title"><a href="https://www.haaga-helia.fi/en/rdi-projects/alfa-labs" target="_blank">ALFA Labs</a></div>
                         <div class="company">Role: Senior researcher</div>
                         <div class="date">Funding: European Union (Erasmus+)</div>
                         <div class="description">
@@ -619,7 +619,7 @@
                     </div>
 
                     <div class="project-item">
-                        <div class="job-title"><a href="https://ulysseus.eu/innovation-hubs/artificial-intelligence/" target="_blank"></a>Applied AI for Business and Education Hub with the Ulysseus European University</div>
+                        <div class="job-title"><a href="https://ulysseus.eu/innovation-hubs/artificial-intelligence/" target="_blank">Applied AI for Business and Education Hub with the Ulysseus European University</a></div>
                         <div class="company">Role: Senior researcher & member steering committee</div>
                         <div class="date">Funding: European Commission</div>
                         <div class="description">
@@ -633,7 +633,12 @@
                     <div class="publications">
                         <div class="publication">
                             <div class="publication-title">AI Adoption in Finnish SMEs: Key Findings from AI Consultancy at a European Digital Innovation Hub</div>
-                            <div class="publication-details">Khan, U.A. Kudravtsev, D., Kauttonen, J. - IEEE 23rd World Symposium on Applied Machine Intelligence and Informatics, Slovakia, 2025</div>
+                            <div class="publication-details">Khan, U.A. Kudravtsev, D.; Kauttonen, J. - IEEE 23rd World Symposium on Applied Machine Intelligence and Informatics, Slovakia, 2025</div>
+                        </div>
+
+                        <div class="publication">
+                            <div class="publication-title">Towards actionable AI implementation capability maturity assessment for SMEs</div>
+                            <div class="publication-details">Kudravtsev, D.; Molainen, T.; Laatikainen, E.; Khan, U.A. - Herman Hollerith Conference pp. 7-17, 2025</div>
                         </div>
 
                         <div class="publication">
