--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <br><br>
                         As an AI consultant for the <a href="https://www.fairedih.fi/" target="_blank" style="color: #3498db; text-decoration: none;">Finnish AI Region (FAIR)</a> project, I bridge the gap between cutting-edge AI research and practical business applications. I specialize in designing AI roadmaps, developing proof-of-concepts, and providing technical consultancy to startups and SMEs across various sectors. I also specialize in establishing research networks and collaborating effectively with diverse research teams, industry stakeholders, and government agencies across Europe and beyond.
                         <br><br>
-                        My current research focus on AI agents, RAG, MCP, and knowledge extraction & processing using LLMs. I am passionate about democratizing AI knowledge and ensuring responsible AI adoption in business and education sectors.
+                        My current research focuses on AI agents, RAG, MCP, and knowledge extraction & processing using LLMs. I am passionate about democratizing AI knowledge and ensuring responsible AI adoption in business and education sectors.
                     </p>
                 </div>
 
@@ -449,23 +449,20 @@
                             <h2 class="section-title">Education</h2>
                             
                             <div class="education-item">
-                                <div class="job-title">Ph.D. in Information Technology</div>
+                                <div class="job-title">Ph.D. in Information Technology (2013)</div>
                                 <div class="company"><a href="https://www.aau.at/en/" target="_blank">Alpen-Adria University, Klagenfurt, Austria</a></div>
-                                <div class="date">2013</div>
                                 <div class="description">Focus: Machine learning, embedded systems, dynamic energy management</div>
                             </div>
 
                             <div class="education-item">
-                                <div class="job-title">Master in Information Technology</div>
+                                <div class="job-title">Master in Information Technology (2010)</div>
                                 <div class="company"><a href="https://www.aau.at/en/" target="_blank">Alpen-Adria University, Klagenfurt, Austria</a></div>
-                                <div class="date">2010</div>
                                 <div class="description">Focus: Machine learning, optimization</div>
                             </div>
 
                             <div class="education-item">
-                                <div class="job-title">Bachelor in Computer Systems Engineering</div>
+                                <div class="job-title">Bachelor in Computer Systems Engineering (2004)</div>
                                 <div class="company"><a href="https://quest.edu.pk/" target="_blank">Quaid-e-Awam University of Engineering, Science & Technology (QUEST)</a></div>
-                                <div class="date">2004</div>
                                 <div class="description">Focus: Programming, database design, embedded systems</div>
                             </div>
                         </div>
