--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
                             </div>
 
                             <div class="experience-item">
-                                <div class="job-title">Associate Professor</div>
+                                <div class="job-title">Lecturer, Assistant Professor, Associate Professor</div>
                                 <div class="company"><a href="https://quest.edu.pk/" target="_blank">QUEST University</a></div>
-                                <div class="date">11/2015 – 01/2022 | Pakistan</div>
+                                <div class="date">01/2005 – 01/2022 | Pakistan</div>
                             </div>
 
                             <div class="experience-item">
