--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
                             </div>
 
                             <div class="experience-item">
-                                <div class="job-title">Lecturer, Assistant Professor, Associate Professor</div>
+                                <div class="job-title">Associate Professor</div>
                                 <div class="company"><a href="https://quest.edu.pk/" target="_blank">QUEST University</a></div>
-                                <div class="date">01/2005 – 01/2022 | Pakistan</div>
+                                <div class="date">11/2015 – 01/2022 | Pakistan</div>
                             </div>
 
                             <div class="experience-item">
@@ -466,6 +466,31 @@
                                 <div class="description">Focus: Programming, database design, embedded systems</div>
                             </div>
                         </div>
+
+                        <div class="section">
+                            <h2 class="section-title">Leadership Experience</h2>
+                            
+                            <div class="leadership-item">
+                                <div class="leadership-title">Chairman, Artificial Intelligence Department</div>
+                                <div class="date">QUEST, Pakistan (Aug 2021 - Jul 2022)</div>
+                            </div>
+
+                            <div class="leadership-item">
+                                <div class="leadership-title">Chairman, Computer Systems Engineering Department</div>
+                                <div class="date">QUEST, Pakistan (Oct 2018 - Oct 2021)</div>
+                            </div>
+
+                            <div class="leadership-item">
+                                <div class="leadership-title">Director, Research & Publications</div>
+                                <div class="date">QUEST, Pakistan (Feb 2020 - Jul 2022)</div>
+                            </div>
+
+                            <div class="leadership-item">
+                                <div class="leadership-title">Chief Editor, Research Journal</div>
+                                <div class="date">QUEST, Pakistan (Jul 2018 - Jul 2022)</div>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="right-column">
                         <div class="section">
