--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                             </div>
                         </div>
 
-                        <div class="section">
+                        <!-- <div class="section">
                             <h2 class="section-title">Leadership Experience</h2>
                             
                             <div class="leadership-item">
@@ -489,7 +489,7 @@
                                 <div class="leadership-title">Chief Editor, Research Journal</div>
                                 <div class="date">QUEST, Pakistan (Jul 2018 - Jul 2022)</div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <div class="right-column">
