--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@
                             </div>
 
                             <div class="experience-item">
-                                <div class="job-title">Associate Professor</div>
+                                <div class="job-title">Lecturer, Assistant Professor, Associate Professor</div>
                                 <div class="company"><a href="https://quest.edu.pk/" target="_blank">QUEST University</a></div>
-                                <div class="date">11/2015 – 01/2022 | Pakistan</div>
+                                <div class="date">01/2005 – 01/2022 | Pakistan</div>
                             </div>
 
                             <div class="experience-item">
@@ -567,9 +567,9 @@
                         <div class="section">
                             <h2 class="section-title">Hobbies</h2>
                             <div class="skill-tags">
+                                <span class="skill-tag">Programming</span>
                                 <span class="skill-tag">Professional Article Writing</span>
                                 <span class="skill-tag">Book Reading</span>
-                                <span class="skill-tag">Critical Thinking</span>
                                 <span class="skill-tag">Behavioral Analysis</span>
                             </div>
                         </div>
