--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     <div class="profile-image">
                         <img src="images/photo.png" alt="Umair Ali Khan" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                     </div>
-                    <h1 class="name">Umair Ali Khan</h1>
+                    <h1 class="name">Umair Ali Khan, Ph.D.</h1>
                     <p class="title">Senior Researcher & AI Consultant</p>
                     <div class="contact-info">
                         <div class="contact-item">📍 Helsinki, Finland</div>
