--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                             </div>
                         </div>
 
-                        <!-- <div class="section">
+                        <div class="section">
                             <h2 class="section-title">Leadership Experience</h2>
                             
                             <div class="leadership-item">
@@ -480,16 +480,7 @@
                                 <div class="date">QUEST, Pakistan (Oct 2018 - Oct 2021)</div>
                             </div>
 
-                            <div class="leadership-item">
-                                <div class="leadership-title">Director, Research & Publications</div>
-                                <div class="date">QUEST, Pakistan (Feb 2020 - Jul 2022)</div>
-                            </div>
-
-                            <div class="leadership-item">
-                                <div class="leadership-title">Chief Editor, Research Journal</div>
-                                <div class="date">QUEST, Pakistan (Jul 2018 - Jul 2022)</div>
-                            </div>
-                        </div> -->
+                        </div>
                     </div>
 
                     <div class="right-column">
