--- a/index.html
+++ b/index.html
@@ -472,12 +472,12 @@
                             
                             <div class="leadership-item">
                                 <div class="leadership-title">Chairman, Artificial Intelligence Department</div>
-                                <div class="date">QUEST, Pakistan (Aug 2021 - Jul 2022)</div>
+                                <div class="date">QUEST University, Pakistan (Aug 2021 - Jul 2022)</div>
                             </div>
 
                             <div class="leadership-item">
                                 <div class="leadership-title">Chairman, Computer Systems Engineering Department</div>
-                                <div class="date">QUEST, Pakistan (Oct 2018 - Oct 2021)</div>
+                                <div class="date">QUEST University, Pakistan (Oct 2018 - Oct 2021)</div>
                             </div>
 
                         </div>
