--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
                             <div class="experience-item">
                                 <div class="job-title">Research Scientist</div>
-                                <div class="company"><a href="https://www.iis.fraunhofer.de/en.html" target="_blank">Fraunhofer Institute for Integrated Circuits & Machine Perception Research Laboratory</a></div>
+                                <div class="company"><a href="https://www.iis.fraunhofer.de/en.html" target="_blank">Fraunhofer Institute for Integrated Circuits | Machine Perception Research Laboratory</a></div>
                                 <div class="date">11/2016 – 09/2017 | Germany & Hungary</div>
                             </div>
                         </div>
