--- a/index.html
+++ b/index.html
@@ -428,13 +428,13 @@
 
                             <div class="experience-item">
                                 <div class="job-title">Professor</div>
-                                <div class="company"><a href="https://quest.edu.pk/" target="_blank">QUEST University</a></div>
+                                <div class="company"><a href="https://quest.edu.pk/" target="_blank">Quaid-e-Awam University of Engineering, Science & Technology (QUEST)</a></div>
                                 <div class="date">01/2022 – Present | Pakistan</div>
                             </div>
 
                             <div class="experience-item">
                                 <div class="job-title">Lecturer | Assistant Professor | Associate Professor</div>
-                                <div class="company"><a href="https://quest.edu.pk/" target="_blank">QUEST University</a></div>
+                                <div class="company"><a href="https://quest.edu.pk/" target="_blank">QQuaid-e-Awam University of Engineering, Science & Technology (QUEST)</a></div>
                                 <div class="date">01/2005 – 01/2022 | Pakistan</div>
                             </div>
 
@@ -472,12 +472,12 @@
                             
                             <div class="leadership-item">
                                 <div class="leadership-title">Chairman, Artificial Intelligence Department</div>
-                                <div class="date">QUEST University, Pakistan (Aug 2021 - Jul 2022)</div>
+                                <div class="date">Quaid-e-Awam University of Engineering, Science & Technology (QUEST), Pakistan (Aug 2021 - Jul 2022)</div>
                             </div>
 
                             <div class="leadership-item">
                                 <div class="leadership-title">Chairman, Computer Systems Engineering Department</div>
-                                <div class="date">QUEST University, Pakistan (Oct 2018 - Oct 2021)</div>
+                                <div class="date">Quaid-e-Awam University of Engineering, Science & Technology (QUEST) (Oct 2018 - Oct 2021)</div>
                             </div>
 
                         </div>
