--- a/index.html
+++ b/index.html
@@ -620,6 +620,11 @@
                     <h2 class="section-title">Selected Publications (Last 2 Years)</h2>
                     <div class="publications">
                         <div class="publication">
+                            <div class="publication-title">Ethical Considerations in the AI Lifecycle for Design, Developing and Adopting AI in Public Sector – the Case of Finland</div>
+                            <div class="publication-details">Alamäki, Ari; Khan, Umair Ali; and Lagstedt, Altti - International Journal of
+Information Systems and Project Management: Vol. 13: No. 4, Article 2, 2025</div>
+                        </div>
+                        <div class="publication">
                             <div class="publication-title">AI Adoption in Finnish SMEs: Key Findings from AI Consultancy at a European Digital Innovation Hub</div>
                             <div class="publication-details">Khan, U.A. Kudravtsev, D.; Kauttonen, J. - IEEE 23rd World Symposium on Applied Machine Intelligence and Informatics, Slovakia, 2025</div>
                         </div>
